<resources>
    <string name="app_name">DoneApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_str">Welcome</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="email_str">Email</string>
    <string name="password_str">Password</string>
    <string name="or_str">Or</string>
    <string name="do_you_have_account_str">Do You Have Account?</string>
    <string name="sign_in_str">Sign In</string>
    <string name="welcome_back_str">Welcome Back</string>
    <string name="username_str">Username</string>
    <string name="forgot_password_str">Forgot Password?</string>
    <string name="don_t_have_account_sign_in_str">Don\'t Have Account?</string>
    <string name="current_details_str">Current Details</string>
    <string name="daniel_ayodeji_str">Daniel Ayodeji</string>
    
<!--    drawer items-->
    <string name="profile_str">Profile</string>
    <string name="todolist_str">Profile</string>
    <string name="statistics_str">Profile</string>
    <string name="about_str">Profile</string>
</resources>