<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <TextView
        android:id="@+id/fragment_sign_up_welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_str"
        android:layout_marginStart="37dp"
        android:layout_marginTop="37dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_str"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_welcome_tv" />

    <EditText
        android:id="@+id/fragment_sign_up_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:hint="@string/email_str"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_tv" />

    <EditText
        android:id="@+id/fragment_sign_up_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="37dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@android:color/white"
        android:hint="@string/password_str"
        android:background="@drawable/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_email_et" />

    <Button
        android:id="@+id/fragment_sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="37dp"
        android:text="@string/sign_up_str"
        android:textColor="@android:color/white"
        android:background="@drawable/sign_up_btn_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_password_et" />


    <TextView
        android:id="@+id/fragment_sign_up_or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_str"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_btn" />


    <ImageButton
        android:id="@+id/fragment_sign_up_google_button_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="16dp"
        android:src="@drawable/fui_ic_googleg_color_24dp"
        app:layout_constraintEnd_toStartOf="@+id/fragment_sign_up_or_tv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_or_tv" />

    <ImageButton
        android:id="@+id/fragment_sign_up_facebok_button_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/fui_ic_facebook_white_22dp"
        app:layout_constraintStart_toEndOf="@+id/fragment_sign_up_or_tv"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_or_tv" />

    <TextView
        android:id="@+id/fragment_sign_up_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="56dp"
        android:text="@string/do_you_have_account_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_sign_up_user_sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:text="@string/sign_in_str"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_sign_up_account_tv"
        app:layout_constraintStart_toEndOf="@+id/fragment_sign_up_account_tv"
        app:layout_constraintTop_toTopOf="@+id/fragment_sign_up_account_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>